<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:layout_marginStart="150dp"
    android:layout_marginTop="80dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--ImageVIew to display our Course Image-->

        <!--Text View to display Course Name-->
        <ImageView
            android:id="@+id/idQuoteImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="false"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
             />

        <TextView
            android:id="@+id/idQuoteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idQuoteImage"
            android:text="@string/quote_name"
            android:textColor="@color/blue_50"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--Text VIew to display COurse Rating-->
        <!--Image used in present in drawable folder-->
        <TextView
            android:id="@+id/idQuoteDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idQuoteName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/idQuoteImage"
            android:drawablePadding="2dp"
            android:text="@string/quote_desc" />

        <Button
            android:id="@+id/button_accept"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@id/idQuoteDesc"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/idQuoteImage"
            android:background="#078AC5"
            android:fontFamily="sans-serif"
            android:text="Accept"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_reject"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_below="@id/idQuoteDesc"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/idQuoteImage"
            android:background="#DC7196"
            android:fontFamily="sans-serif"
            android:text="Reject"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
